# scim2-cli

./: .gitignore  .pre-commit-config.yaml  README.md  flake.nix  pyproject.toml
.forgejo/workflows/: tests.yml
.github/workflows/: bundle.yml  release.yml
doc/: changelog.rst  conf.py  contributing.rst  index.rst  reference.rst  tutorial.rst
scim2_cli/: __init__.py  create.py  delete.py  query.py  replace.py  search.py  test.py  utils.py
scim_cli/: __init__.py
tests/: conftest.py  test_cli.py  test_create.py  test_delete.py  test_query.py  test_replace.py  test_search.py  test_test.py  test_utils.py
